--- a/styleguide/custom/themes/styleguide/src/sass/components/_buttons.scss
+++ b/styleguide/custom/themes/styleguide/src/sass/components/_buttons.scss
@@ -1,8 +1,10 @@
 
 .sidebar__button {
-	width: 158px;
-	height: 56px;
+	// width: 150px;
+	// height: 56px;
 	// background-color: $green;
-	border-radius: 2px;
+	// border-radius: 2px;
 	border: 1px solid $black;
+	padding: 10px 15px;
+	margin-top: 20px;
 }
