--- a/styleguide/custom/themes/styleguide/src/sass/style.scss
+++ b/styleguide/custom/themes/styleguide/src/sass/style.scss
@@ -13,6 +13,7 @@
 
 // @import "base/reset";
 @import "base/typography";
+@import "base/clientcustom";
 
 @import "components/buttons";
 @import "components/navigation";
