--- a/styleguide/custom/themes/styleguide/src/sass/helpers/_variables.scss
+++ b/styleguide/custom/themes/styleguide/src/sass/helpers/_variables.scss
@@ -1,6 +1,9 @@
-$title-font: "futura-pt",sans-serif;
-$p-font: 'chaparral-pro',sans-serif;
-$main-headings: "futura-pt",sans-serif;
+$title-font: "open-sans",sans-serif;
+// $p-font: 'chaparral-pro',sans-serif;
+$p-font: "open-sans",sans-serif;
+// $p-font: "brandon-grotesque", sans-serif;
+$main-headings: "open-sans",sans-serif;
+$big-headings: "open-sans", sans-serif;
 $feature-font: "adelle",serif;
 $script-font: "grafolita-script",sans-serif;
 $quote-src: 'Lucida Grande',sans-serif;
@@ -9,7 +12,7 @@ $main-body-font: $p-font;
 
 //	Modular Scale
 $modular-scale-ratio: $perfect-fourth;
-$modular-scale-base: 1.1rem;
+$modular-scale-base: 1.2rem;
 
 // Sizes
 $base-line-height: $modular-scale-base * 1.5;
