--- a/styleguide/custom/themes/styleguide/src/sass/layout/_grid-settings.scss
+++ b/styleguide/custom/themes/styleguide/src/sass/layout/_grid-settings.scss
@@ -5,14 +5,16 @@
 // $gutter: 2em;
 $grid-columns: 5;
 
-$max-width: em(1200);
+$max-width: em(1100);
 
 // Major: Content centric breakpoints
+$bp-xlarge: new-breakpoint(min-width 70em 12);
 $bp-large: new-breakpoint(min-width 50em 12);
+$bp-med: new-breakpoint(max-width 49em 12);
 $bp-small: new-breakpoint(max-width 30em 5);
 
 // Visual Grid view
 $visual-grid: false;
 $visual-grid-color: #000;
-$visual-grid-index: back;
+$visual-grid-index: front;
 $visual-grid-opacity: 0.2;
