--- a/styleguide/custom/themes/styleguide/src/sass/layout/_header.scss
+++ b/styleguide/custom/themes/styleguide/src/sass/layout/_header.scss
@@ -1,26 +1,64 @@
-header {
+.main-header {
+	// width: 100%;
+	height: 105px;
+	background: white;
+	// background: yellow;
+	position: fixed;
+	z-index: 999;
+	box-shadow: 0px 0px 7px rgba(0,0,0, 0.4);
 	width: 100%;
-	min-height: 150px;
-	display: flex;
-	// justify-content: flex-end;
-	h1 {
-		flex: 1 0 60%;
-	}
-	.logo__holder {
-		flex: 1 0 40%;
+}
+
+.main-header {
+	.main-wrapper {
 		display: flex;
-		justify-content: flex-end;
-		img {
-			max-width: 116px;
-			max-height: 103px;
-			margin-top: 42px;
-			margin-right: 0px;
-			@include media($bp-small) {
-				margin-top: 20px;
-				width: 70%;
-				height: 70%;
-		    }
+		// justify-content: space-between;
+		align-items: center;
+		// margin: 0;
+		h1 {
+			text-transform: uppercase;
+			margin: 0;
+			margin-top: 10px;
+			font-size: modular-scale(0, 0.9rem); 
+			line-height: modular-scale(0); 
 		}
 	}
-	
 }
+
+.main-logo {
+	max-height: 85px;
+	width: auto;
+	margin-right: 15px;
+	margin-top: 12px;
+}
+
+// header {
+// 	width: 100%;
+// 	// min-height: 150px;
+// 	display: flex;
+// 	position: relative;
+// 	// justify-content: flex-end;
+// 	h1 {
+// 		flex: 1 0 60%;
+// 	}
+// 	.logo__holder {
+// 		flex: 1 0 40%;
+// 		display: flex;
+// 		justify-content: flex-end;
+// 		img {
+// 			// max-width: 116px;
+// 			// max-height: 103px;
+// 			position: relative;
+// 			width: 40%;
+// 			height: 40%;
+// 			margin-top: 20px;
+// 			margin-right: 0px;
+// 			@include media($bp-small) {
+// 				margin-top: 20px;
+// 				width: 70%;
+// 				height: 70%;
+// 		    }
+// 		}
+// 	}
+	
+// }
