--- a/styleguide/custom/themes/styleguide/src/sass/layout/_main-logo.scss
+++ b/styleguide/custom/themes/styleguide/src/sass/layout/_main-logo.scss
@@ -8,9 +8,9 @@ ul.logo__list {
 }
 
 .logopackage {
-	width: 266px;
-	height: 151px;
-	border: 1px solid $logo-pack-color;
+	// width: 266px;
+	// height: 151px;
+	// border: 1px solid $logo-pack-color;
 	margin: 30px auto;
 	figcaption {
 		background-color: $button-color;
@@ -18,6 +18,7 @@ ul.logo__list {
 		display: flex;
 		align-items: center;
 		justify-content: center;
+		position: relative;
 		a {
 			text-decoration: none;
 		}
@@ -25,7 +26,9 @@ ul.logo__list {
 			margin: 8px;
 		}
 		img {
+			position: relative;
 			margin: 8px;
+			height: auto;
 		}
 	}
 }
@@ -33,8 +36,80 @@ ul.logo__list {
 .logopackage__logocontainer {
 	display: flex;
 	align-items: center;
-	justify-content: center;
+	position: relative;
+	@include justify-content(space-between);
+	@include media($bp-small) {
+		@include flex-direction(column);
+    }
+    .logopackage__single {
+    	flex: 0 0 45%;
+    	margin: 20px 0;
+    }
 	img {
-		margin: 15px;
+		position: relative;
+		// margin: 15px;
+		width: 100%;
+		// height: auto;
+		@include media($bp-small) {
+			@include flex-direction(column);
+			@include flex(0 0 auto);
+	    }
+	}
+}
+
+.logo-samples {
+	position: relative;
+	margin: 0;
+	@include display(flex);
+	@include justify-content(space-between);
+	@include flex-wrap(wrap);
+	@include media($bp-small) {
+		@include flex-direction(column);
+    }
+	.logo-samples__single {
+		// margin: 0;
+		position: relative;
+		@include flex(0 0 30%);
+		img {
+			max-width: 100%;
+			height: auto;
+		}
+	}
+}
+
+figcaption.logopack__download {
+	background-color: white;
+	border: 1px solid black;
+	min-height: 42px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+	width: 50%;
+	margin: 50px auto 0;
+	padding: 10px 0;
+	transition: all 0.5s;
+	@include media($bp-small) {
+		width: 100%;
+    }
+	&:hover {
+		background-color: yellow;
+		h3 {
+			// color: yellow;
+		}
+	}
+	a {
+		text-decoration: none;
+		border-bottom: none;
+		&:hover{
+			// background-color: yellow;
+		}
+	}
+	h3 {
+		font-weight: 400;
+		color: black;
+		margin: 8px;
+		transition: all 0.5s;
+		padding-top: 0;
 	}
 }
