--- a/styleguide/custom/themes/styleguide/src/sass/layout/_sidebar.scss
+++ b/styleguide/custom/themes/styleguide/src/sass/layout/_sidebar.scss
@@ -4,6 +4,7 @@ aside {
 		// float: left;
 		position: fixed;
 		max-width: 200px;
+		margin-top: 30px;
     }
 	// margin-top: 10px;
 	@include media($bp-small) {
@@ -14,8 +15,23 @@ aside {
 .sidebar__nav ul {
 	list-style-type: none;
 	padding-left: 0;
+	padding-bottom: 0;
 	li {
-		padding: 5px 0;
+		// padding: 5px 0;
+	}
+}
+
+.get-in-touch {
+	border-top: 1px solid lightgrey;
+	padding-top: 20px;
+	margin-top: 20px;
+	a {
+		transition: all 0.5s;
+		&:hover {
+			button h3 {
+				// color: yellow;
+			}
+		}
 	}
 }
 
@@ -33,3 +49,8 @@ aside {
 
 #mainmenu li.selected { font-weight: 500; }
 
+
+#left .logo__holder img {
+	width: 90%;
+	margin-bottom: 20px;
+}
