--- a/custom/themes/ingenuity/src/sass/layout/_main.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_main.scss
@@ -21,7 +21,7 @@ body {
 .blog-entry {
 	position: relative;
 	background-color: $white;
-	// padding: 50px 0px;
+	padding: 50px 25px;
 	@include media($bp-large) {
 		@include span-columns(8);
 		@include shift(2);
