--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -1,11 +1,10 @@
-// Modular scale is in relation to 1.1rem = 22px
+// Modular scale is in relation to 1.2rem = 22px
 body {
 	color: rgba(0,0,0,0.85);
 }
 
 h1, h2, h3, h4, h5, h6 {
 	margin: 0;
-	// margin-bottom: 30px;
 }
 
 h1 {
@@ -16,14 +15,6 @@ h1 {
 	line-height: modular-scale(0, 3.44rem); //62px
 	color: $white;
 	text-transform: uppercase;
-}
-
-h1.title {
-	float: left;
-	@include media($bp-small) {
-		font-size: modular-scale(3); 
-		line-height: modular-scale(3); 
-    }
 }
 
 h2 {
@@ -50,32 +41,11 @@ h2 {
 }
 
 h3 {
-	font-family: $main-headings;
-	font-style: normal;
-	font-weight: 600;
-	font-size: modular-scale(1, 1.1rem); //20px
-	line-height: modular-scale(2, 1.25rem);
-	text-transform: uppercase;
-	@include media($bp-large) {
-	    font-size: modular-scale(2, 1.25rem); //20px
-	    line-height: modular-scale(3, 1.25rem);
-	    margin-bottom: 15px;
-	    padding-top: 20px;
-	}
+
 }
 
 h4 {
-	font-family: $main-headings;
-	font-style: normal;
-	font-weight: 300;
-	font-size: modular-scale(0, 1.25rem); //20px
-	line-height: modular-scale(1, 1.25rem);
-	text-transform: uppercase;
-	margin-top: 20px;
-	@include media($bp-large) {
-	    font-size: modular-scale(1, 1.25rem); //20px
-	    line-height: modular-scale(2, 1.25rem);
-	}
+
 }
 
 h5 {
@@ -91,15 +61,6 @@ a {
 	color: #000;
 }
 
-ul {
-	font-family: $p-font;
-	padding-bottom: 15px;
-	font-size: modular-scale(0); 
-	line-height: modular-scale(1); 
-	li {
-		font-weight: 300;
-	}
-}
 
 blockquote {
 	font-style: italic;
@@ -107,38 +68,7 @@ blockquote {
 	line-height: modular-scale(3); 
 }
 
-//h3.overview__tagline,
-.overview__content h3 {
-	font-family: $main-body-font;
-	font-style: italic;
-	font-weight: 300;
-	font-size: modular-scale(0, 1.25rem); //20px
-	line-height: modular-scale(1, 1.25rem);
-	margin-bottom: 15px;
-}
-
-h3.tone__principals, 
-h3.photography__principals,
-h3.typography__fonts,
-#templates ul li {
-	font-weight: 300;
-}
-
-h3.tone__principals, 
-h3.photography__principals,
-h3.typography__fonts {
-	// margin-top: 20px;
-}
-
-#templates ul li {
-	line-height: modular-scale(2, 1.25rem);
-}
-
 // MAIN ============================
-
-.font-sample {
- 	margin: 0;
-}
 
 main {
 	p { 
@@ -153,12 +83,14 @@ main {
 		}
 	}
 	p.no-space {
-		margin: 0;
+		margin-bottom: 0;
 	}
 }
 
-// SIDEBAR ============================
+// PROJECTS ============================
 
-
+span.stats_label {
+	font-family: $bold-font;
+}
 
 
