--- a/custom/themes/ingenuity/src/sass/helpers/_variables.scss
+++ b/custom/themes/ingenuity/src/sass/helpers/_variables.scss
@@ -6,6 +6,8 @@ $feature-font: "adelle",serif;
 $script-font: "grafolita-script",sans-serif;
 $quote-src: "Lucida Grande",sans-serif;
 
+$bold-font: "Audimat3000-Regulier", sans-serif;
+
 $main-body-font: $p-font;
 
 //	Modular Scale
