--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -8,16 +8,8 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 h1 {
-	font-family: $title-font;
-	font-style: normal;
-	font-weight: 400;
-	font-size: modular-scale(0, 3.33rem); //60px
-	line-height: modular-scale(0, 3.44rem); //62px
 	color: $white;
-	text-transform: uppercase;
-}
-
-h2 {
+	text-align: center;
 	font-family: $main-headings;
 	text-transform: uppercase;
 	font-weight: 800;
@@ -27,20 +19,34 @@ h2 {
 	margin-bottom: 20px;
 	margin-top: 20px;
 	@include media($bp-large) {
-	    font-size: modular-scale(5, 1.2rem); //32px
-	    line-height: modular-scale(5, 1.2rem);
-	    margin-bottom: 20px;
-	    margin-top: 20px;
+	    font-size: modular-scale(4, 1.2rem); //32px
+	    line-height: modular-scale(4, 1.2rem);
+	    margin: 20px 100px;
 	}
 	@include media($bp-xlarge) {
-	    font-size: modular-scale(6, 1.15rem); //32px
-	    line-height: modular-scale(6, 1rem);
+	    font-size: modular-scale(5, 1.15rem); //32px
+	    line-height: modular-scale(5, 1rem);
 	    margin-bottom: 20px;
 	    margin-top: 20px;
 	}
 }
 
-h3 {
+h2 {
+	font-family: $title-font;
+	font-style: normal;
+	font-weight: 400;
+	font-size: modular-scale(3); 
+	line-height: modular-scale(3); 
+	color: $white;
+	text-transform: uppercase;	
+}
+
+h3,
+.project__testimonial blockquote {
+
+	font-family: $main-headings;
+	font-size: modular-scale(2); 
+	line-height: modular-scale(2, 1.5rem); 
 
 }
 
@@ -68,6 +74,10 @@ blockquote {
 	line-height: modular-scale(3); 
 }
 
+::selection {
+	color: $yellow;
+}
+
 // MAIN ============================
 
 main {
@@ -88,6 +98,8 @@ main {
 }
 
 // PROJECTS ============================
+
+
 
 span.stats_label {
 	font-family: $bold-font;
