--- a/custom/themes/ingenuity/src/sass/components/_gallery.scss
+++ b/custom/themes/ingenuity/src/sass/components/_gallery.scss
@@ -1,9 +1,11 @@
 .project__gallery {
-    height: 665px;
+    height: 500px;
+    // margin-left: -50%;
+    // margin-right: -50%;
 }
 
 .gallery {
-    height: 665px;
+    height: 500px;
 }
 
 .cell {
@@ -18,15 +20,6 @@
         min-height: 100%;
         z-index: 0;
         overflow: hidden;
-    }
-    &:nth-of-type(1):after {
-        background-color: rgba(47,7,48,.5);
-    }
-    &:nth-of-type(2):after {
-        background-color: rgba(34,61,15,.5);
-    }
-    &:nth-of-type(3):after {
-        background-color: rgba(48,22,12,.5);
     }
     header {
         @include outer-container;
@@ -45,7 +38,7 @@
     img {
         object-fit: cover;
         width: 100%;
-        height: 100%;
+        height: auto;
         position: absolute;
         z-index: 0;
         @include filter(grayscale(100%) blur(1px));
