--- a/custom/themes/ingenuity/src/sass/layout/_main.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_main.scss
@@ -5,7 +5,7 @@ body {
 .main-wrapper {
 	// max-width: 1024px;
 	// margin: auto;
-	padding: 0 50px 50px;
+	// padding: 0 50px 50px;
 	@include outer-container;
 	@include media($bp-small) {
 		padding: 0 30px;
@@ -21,7 +21,7 @@ body {
 .blog-entry {
 	position: relative;
 	background-color: $white;
-	padding: 50px 25px;
+	padding: 50px 0;
 	@include media($bp-large) {
 		@include span-columns(8);
 		@include shift(2);
@@ -32,22 +32,6 @@ body {
 		height: auto;
     }
     blockquote {
-    	margin-top: 40px;
-    	margin-bottom: 40px;
-    	margin-right: -70px;
-    	border-left: 5px solid lightgrey;
-    	padding-left: 15px;
-    	padding-top: 10px;
-    	padding-bottom: 10px;
-    	@include media($bp-med) {
-    	    margin-right: -10px;
-    	}
-    	@include media($bp-small) {
-    	    margin-top: 40px;
-    	    margin-bottom: 40px;
-    	    padding-left: 15px;
-    	    margin-left: 10px;
-    	}
     }
     ul {
     	margin: 0;
