--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -32,7 +32,7 @@
 
 .home-hero,
 .default-hero {
-	background: black;
+	// background: black;
 	width: 100%;
 	background-position: center center;
 	background-size: cover;
