--- a/custom/themes/ingenuity/src/sass/base/_typography.scss
+++ b/custom/themes/ingenuity/src/sass/base/_typography.scss
@@ -67,6 +67,16 @@ a {
 	color: #000;
 }
 
+ul.post-categories {
+	font-family: $main-body-font;
+	padding: 0 0 0 10px;
+	margin: 0;
+	list-style-type: none;
+	li {
+		
+	}
+}
+
 
 blockquote {
 	font-style: italic;
@@ -97,11 +107,29 @@ main {
 	}
 }
 
+// BLOG ==============================
+
+.blog-entry {
+	blockquote {
+		font-family: $title-font;
+		border-left: 4px solid $yellow;
+		padding-left: 20px;
+		font-size: modular-scale(1);
+		line-height: modular-scale(2);
+		
+	}
+	blockquote p {
+		font-size: modular-scale(1);
+		line-height: modular-scale(2);
+	}
+}
+
 // PROJECTS ============================
 
 
 
-span.stats_label {
+span.stats_label,
+span.bolded-text {
 	font-family: $bold-font;
 }
 
