--- a/custom/themes/ingenuity/src/sass/layout/_grid-settings.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_grid-settings.scss
@@ -13,8 +13,10 @@ $bp-large: new-breakpoint(min-width 50em 12);
 $bp-med: new-breakpoint(max-width 49em 12);
 $bp-small: new-breakpoint(max-width 30em 5);
 
+$bp-ls-small: new-breakpoint(max-height 25em 5);
+
 // Visual Grid view
-$visual-grid: true;
+$visual-grid: false;
 $visual-grid-color: #000;
 $visual-grid-index: front;
 $visual-grid-opacity: 0.2;
