--- a/custom/themes/ingenuity/src/sass/layout/_main.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_main.scss
@@ -1,3 +1,48 @@
+.fullscreen-bg {
+  position: fixed;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  overflow: hidden;
+  z-index: -100;
+  filter: grayscale(100%) brightness(0.7);
+}
+
+.fullscreen-bg__video {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+@media (min-aspect-ratio: 16/9) {
+  .fullscreen-bg__video {
+    height: 300%;
+    top: -100%;
+  }
+}
+
+@media (max-aspect-ratio: 16/9) {
+  .fullscreen-bg__video {
+    width: 300%;
+    left: -100%;
+  }
+}
+
+@media (max-width: 767px) {
+  .fullscreen-bg {
+    background: url('../img/videoframe.jpg') center center / cover no-repeat;
+  }
+
+  .fullscreen-bg__video {
+    display: none;
+  }
+}
+
+
+
 body {
 	overflow-x: hidden;
 }
@@ -42,7 +87,15 @@ body {
 }
 
 .blog-entry {
-	// padding: 50px 20px;
+	@include media($bp-large) {
+		@include span-columns(8);
+		@include shift(0);
+		padding: 50px 25px;
+    }
+}
+
+.blog-wrapper {
+
 }
 
 article {
@@ -72,6 +125,8 @@ nav.main-nav {
   text-align:center;
   margin-left:-100%;
   margin-right:-100%;
+  margin-top: 25px;
+  margin-bottom: 25px;
   padding: 0;
   display: flex;
   align-items: center;
@@ -82,35 +137,38 @@ nav.main-nav {
   img {
   	width: 100%;
   	overflow: hidden;
+  	// margin: 25px 0;
+  	margin: 0 auto;
   }
 }
 
 .full-width.full-quote { 
-  overflow-x: hidden;
-  font-family: $p-font;
-  font-style: italic;
-  font-weight: 600;
-  font-size: modular-scale(2);
-  line-height: modular-scale(3);
-  text-align: center;
-  padding: 40px 0;
-  p {
-  font-family: $p-font;
-  font-style: italic;
-  font-weight: 600;
-  font-size: modular-scale(2);
-  line-height: modular-scale(3);
-  text-align: center;
-  }
-  @include media($bp-large) {
-    text-align:center;
-    margin-left: -25%;
-    margin-right: -25%;
-  }
-  @include media($bp-small) {
-    font-size: modular-scale(1);
-    line-height: modular-scale(2);
-  }
+	overflow-x: hidden;
+	font-family: $p-font;
+	font-style: italic;
+	font-weight: 600;
+	font-size: modular-scale(2);
+	line-height: modular-scale(3);
+	text-align: center;
+	padding: 40px 0;
+	p {
+		color: $yellow;
+		font-family: $p-font;
+		font-style: italic;
+		font-weight: 600;
+		font-size: modular-scale(2);
+		line-height: modular-scale(3);
+		text-align: center;
+	}
+	@include media($bp-large) {
+		text-align:center;
+		margin-left: -10%;
+		margin-right: -10%;
+	}
+	@include media($bp-small) {
+		font-size: modular-scale(1);
+		line-height: modular-scale(2);
+	}
 }
 
 span.big-quotes {
