--- a/custom/themes/ingenuity/src/sass/layout/_projects.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_projects.scss
@@ -1,11 +1,37 @@
-// Projects Landing Page
+// PROJECTs Landing Page
 .projects__panel {
 	width: 100%;
 	height: 250px;
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-position: center center;
+	margin-bottom: 40px;
+	position: relative;
+	transition: all 0.5s;
+	&:hover {
+		.color-overlay {
+			background-color: rgba(0,0,0,0.0);
+			filter: brightness(0.7);
+		}
+	}
+	.color-overlay {
+		width: 100%;
+		height: 100%;
+		background-color: rgba(0,0,0,0.3);
+		position: absolute;
+		top: 0;
+		left: 0;
+		transition: all 0.5s;
+	}
+	h2 {
+		position: relative;
+		text-align: center;
+		margin: 0 auto;
+		padding-top: 100px;
+	}
 }
+
+// Single PROJECT Page
 
 .project__stats {
 
