Update: home hero section

--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -52,6 +52,13 @@
 
 .home-hero {
 	min-height: 100vh;
+	hgroup {
+		img {
+			width: 200px;
+			height: auto;
+			margin-bottom: 25px;
+		}
+	}
 }
 
 .default-hero {
