--- a/custom/themes/ingenuity/src/sass/components/_navigation.scss
+++ b/custom/themes/ingenuity/src/sass/components/_navigation.scss
@@ -1,8 +1,12 @@
+.navigation {
+  padding-top: 25px;
+}
+
 // KEEPING TYPOGRAPHY STYLING HERE DUE TO COMPLEX SELECTORS
 // Based off: http://cssmenumaker.com/blog/wordpress-3-drop-down-menu-tutorial
 #main-menu,
 #mobile-menu {
-  background: $white;
+  // background: $white;
   margin: 0;
   width: 100%;
   padding: 0;
@@ -67,6 +71,8 @@
   margin: 0;
   transition: color .2s ease;
   box-sizing: border-box;
+  background-color: rgba(0,0,0,0.3);
+  // text-transform: uppercase;
 }
 #main-menu ul li ul,
 #mobile-menu ul li ul {
@@ -80,7 +86,10 @@
   max-height: 0;
   position: absolute;
   transition: max-height 0.4s ease-out;
-  background: #ffffff;
+  // background: #ffffff;
+  font-family: $main-body-font;
+  text-transform: uppercase;
+  background-color: rgba(0,0,0,0.3);
 }
 #main-menu ul li ul li.has-sub:after,
 #mobile-menu ul li ul li.has-sub:after {
@@ -126,7 +135,7 @@
   font-weight: 400;
   // text-transform: none;
   color: $yellow;
-  background: $white;
+  background: none;
   letter-spacing: 0;
   display: block;
   width: 170px;
@@ -136,13 +145,13 @@
 #main-menu ul li ul li.active > a,
 #mobile-menu ul li ul li:hover > a,
 #mobile-menu ul li ul li.active > a {
-  color: $orange;
+  color: $white;
 }
 #main-menu ul li ul li:hover:after,
 #main-menu ul li ul li.active:after,
 #mobile-menu ul li ul li:hover:after,
 #mobile-menu ul li ul li.active:after {
-  background: $orange;
+  background: $white;
 }
 #main-menu ul li ul li:hover > ul,
 #mobile-menu ul li ul li:hover > ul {
@@ -203,7 +212,7 @@
 }
 #main-menu > ul > li.has-sub > a,
 #mobile-menu > ul > li.has-sub > a {
-  padding-right: 40px;
+  padding-right: 20px;
 }
 // this styles the arrow (▾) beside the main menu <li> that have sub-items
 #main-menu > ul > li.has-sub > a:before,
@@ -211,13 +220,13 @@
   display: block;
   content: "";
   border: 4px solid transparent;
-  border-top-color: $orange;
+  border-top-color: $white;
   z-index: 2;
   height: 0;
   width: 0;
   position: absolute;
-  right: 25px;
-  top: 5px;
+  right: 8px;
+  top: 13px;
 }
 // this styles the background behind the (▾)
 #main-menu > ul > li.has-sub > a:after,
@@ -237,12 +246,14 @@
 #main-menu > ul > li.active > a:after,
 #mobile-menu > ul > li:hover > a:after,
 #mobile-menu > ul > li.active > a:after {
-  background: $orange;
+  // background: $orange;
 }
 #main-menu > ul > li > a,
 #mobile-menu > ul > li > a {
-  color: $grey;
-  padding: 0px 20px;
+  font-family: $main-body-font;
+  color: $yellow;
+  padding: 5px 10px;
+  margin: 0 5px;
   font-weight: 300;
   letter-spacing: 1px;
   font-size: modular-scale(0);
@@ -412,7 +423,7 @@
   }
   #main-menu ul li ul li:hover > a,
   #mobile-menu ul li ul li:hover > a {
-    color: $orange;
+    color: $white;
   }
   #main-menu #menu-button,
   #mobile-menu #menu-button {
