--- a/custom/themes/ingenuity/src/sass/layout/_header.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_header.scss
@@ -1,7 +1,7 @@
 .main-header {
 	// width: 100%;
 	height: 90px;
-	background: white;
+	background: $black;
 	// background: yellow;
 	position: fixed;
 	z-index: 999;
@@ -11,8 +11,9 @@
 
 .main-header {
 	.main-wrapper {
-		display: flex;
-		align-items: center;
+		@include display(flex);
+		@include align-items(center);
+		@include justify-content(space-between);
 		h1 {
 			text-transform: uppercase;
 			margin: 0;
@@ -20,6 +21,16 @@
 			font-size: modular-scale(0, 0.9rem); 
 			line-height: modular-scale(0); 
 		}
+	}
+	img {
+		max-height: 65px;
+		width: auto;
+		margin-right: 15px;
+		margin-top: 12px;
+	}
+	.default-nav {
+		@include order(3);
+		padding-top: 15px;
 	}
 }
 
@@ -53,7 +64,7 @@
 .home-hero {
 	min-height: 100vh;
 	hgroup {
-		margin-top: -50px;
+		margin-top: -100px;
 		img {
 			width: 200px;
 			height: auto;
