--- a/custom/themes/ingenuity/style.css
+++ b/custom/themes/ingenuity/style.css
@@ -540,6 +540,16 @@ figcaption.logopack__download:hover {
   box-sizing: border-box;
   background-color: rgba(0, 0, 0, 0.3); }
 
+.default-nav #main-menu ul li a,
+.default-nav #mobile-menu ul li a {
+  text-decoration: none;
+  display: block;
+  margin: 0;
+  -webkit-transition: color .2s ease;
+          transition: color .2s ease;
+  box-sizing: border-box;
+  background-color: black; }
+
 #main-menu ul li ul,
 #mobile-menu ul li ul {
   position: absolute;
@@ -1035,7 +1045,7 @@ figcaption.logopack__download:hover {
 
 .main-header {
   height: 90px;
-  background: white;
+  background: black;
   position: fixed;
   z-index: 999;
   box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.3);
@@ -1043,19 +1053,47 @@ figcaption.logopack__download:hover {
 
 .main-header .main-wrapper {
   display: -webkit-box;
+  display: -moz-box;
+  display: box;
   display: -webkit-flex;
+  display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
+  box-align: center;
   -webkit-align-items: center;
-      -ms-flex-align: center;
-          align-items: center; }
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center;
+  -webkit-box-pack: justify;
+  box-pack: justify;
+  -webkit-justify-content: space-between;
+  -moz-justify-content: space-between;
+  -ms-justify-content: space-between;
+  -o-justify-content: space-between;
+  justify-content: space-between;
+  -ms-flex-pack: justify; }
   .main-header .main-wrapper h1 {
     text-transform: uppercase;
     margin: 0;
     margin-top: 10px;
     font-size: 0.9rem;
     line-height: 1.2rem; }
+.main-header img {
+  max-height: 65px;
+  width: auto;
+  margin-right: 15px;
+  margin-top: 12px; }
+.main-header .default-nav {
+  -webkit-box-ordinal-group: 3;
+  box-ordinal-group: 3;
+  -webkit-order: 3;
+  -moz-order: 3;
+  order: 3;
+  -ms-flex-order: 3;
+  padding-top: 15px; }
 
 .main-logo {
   max-height: 85px;
@@ -1131,7 +1169,7 @@ figcaption.logopack__download:hover {
 .home-hero {
   min-height: 100vh; }
   .home-hero hgroup {
-    margin-top: -50px; }
+    margin-top: -100px; }
     .home-hero hgroup img {
       width: 200px;
       height: auto;
@@ -1335,7 +1373,8 @@ aside {
   margin-bottom: 40px;
   position: relative;
   -webkit-transition: all 0.5s;
-          transition: all 0.5s; }
+          transition: all 0.5s;
+  -webkit-transform: skew(16deg, 0); }
   .projects__panel:hover .color-overlay {
     background-color: transparent;
     -webkit-filter: brightness(0.7);
