Update: PROJECTS landing page

--- a/custom/themes/ingenuity/src/sass/layout/_projects.scss
+++ b/custom/themes/ingenuity/src/sass/layout/_projects.scss
@@ -8,7 +8,7 @@
 	margin-bottom: 40px;
 	position: relative;
 	transition: all 0.5s;
-	-webkit-transform: skew(16deg, 0);
+	// -webkit-transform: skew(16deg, 0);
 	&:hover {
 		.color-overlay {
 			background-color: rgba(0,0,0,0.0);
